Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27901

Windows : Innodb spend time on useless calculation of file system block size, which is never used

    XMLWordPrintable

Details

    Description

      using sysbench update_no_index, with 10K users, os_file_get_status_win32 takes unreasonably long time calculating file system block size, which is not going to be used or shown anywhere but in an obscure innodb information schema table.

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            wlad Vladislav Vaintroub
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25d
                0.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.