MDEV-27901 Windows : expensive system calls used to calculate file system block size

The result is not used anywhere but in the output of Innodb information
schema, but this can take as much as 7%CPU (only) on a benchmark.

Fix to move fs blocksize calculate to where it is used.